Salvo datos acumulados antes de crear rama para Evidencia GA8.